extended EnvoyFleetItem with apis
